--- a/style.css
+++ b/style.css
@@ -6,18 +6,51 @@ Version: 1.0
 Author: L'Elite
 Author URI: http://laelitenetwork.com
 */
-@import url(http://fonts.googleapis.com/css?family=Libre+Baskerville:400,700,400italic);
+@font-face {
+    font-family: 'baskervald_adf_stdbold';
+    src: url('assets/fonts/Baskervald/baskervald-bold-webfont.eot');
+    src: url('assets/fonts/Baskervald/baskervald-bold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/fonts/Baskervald/baskervald-bold-webfont.woff') format('woff'),
+         url('assets/fonts/Baskervald/baskervald-bold-webfont.ttf') format('truetype'),
+         url('assets/fonts/Baskervald/baskervald-bold-webfont.svg#baskervald_adf_stdbold') format('svg');
+    font-weight: bold;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'baskervald_adf_stditalic';
+    src: url('assets/fonts/Baskervald/baskervald-italic-webfont.eot');
+    src: url('assets/fonts/Baskervald/baskervald-italic-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/fonts/Baskervald/baskervald-italic-webfont.woff') format('woff'),
+         url('assets/fonts/Baskervald/baskervald-italic-webfont.ttf') format('truetype'),
+         url('assets/fonts/Baskervald/baskervald-italic-webfont.svg#baskervald_adf_stditalic') format('svg');
+    font-weight: normal;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'baskervald_adf_stdregular';
+    src: url('assets/fonts/Baskervald/baskervald-webfont.eot');
+    src: url('assets/fonts/Baskervald/baskervald-webfont.eot?#iefix') format('embedded-opentype'),
+         url('assets/fonts/Baskervald/baskervald-webfont.woff') format('woff'),
+         url('assets/fonts/Baskervald/baskervald-webfont.ttf') format('truetype'),
+         url('assets/fonts/Baskervald/baskervald-webfont.svg#baskervald_adf_stdregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
 /**
  * BODY
  */
-html, * {
-	font-family: 'Libre Baskerville', serif;
-}
 html {
 	margin-top: 0 !important;
 }
 body {
-	font-size: 125%;
+	font-family: 'Baskerville', 'baskervald_adf_stdregular', 'Times New Roman', serif;
+}
+.btn {
+	background-image: none;
+	background-repeat: no-repeat;
+}
+.center {
+	text-align: center;
 }
 /**
  * NAVIGATION BAR
@@ -67,7 +100,7 @@ body.logged-in .navbar-default {
 .navbar-default .navbar-nav > .active > a:focus {
 	background: rgba(65,166,42,1);
 	color: rgba(255,255,255,1);
-	text-shadow: 0 0 1px rgba(105,201,4,1);
+	text-shadow: 0 0 1px rgba(240,240,240,.25);
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
 	-ms-transition: all 0.5s ease-in-out;
@@ -104,73 +137,122 @@ body.logged-in .navbar-default {
  * HOMEPAGE JUMBOTRON
  */
 .jumbotron {
-	background: transparent url('assets/images/Boceto_1_960.jpg') no-repeat center top;
+	background: transparent;
 	background-size: auto;
 	-webkit-background-size: auto;
 	-moz-background-size: auto;
 	-o-background-size: auto;
-	padding: 4em 2em;
+	padding: 0;
 	position: relative;
 	display: block;
 	height: 500px;
 	clear: both;
-	margin: 50px 0 0 0;
 }
 .jumbotron .container {
-	width: 100%;
-	height: 100%;
-	padding: 4em;
+	padding: 30px 0 0 0;
 	text-align: center;
 }
 .jumbotron .quote {
 	font-size: 2em;
-	font-style: italic;
-	padding: 400px 0 0 0;
 	width: 50%;
 	margin: 0 auto;
+	font-family: 'Baskerville', 'baskervald_adf_stditalic', 'Times New Roman', serif;
+}
+@media all and ( max-width: 400px ) {
+	.jumbotron .quote {
+		width: 100%;
+	}
+}
+@media all and ( min-width: 400px ) {
+	.jumbotron .quote {
+		width: 100%;
+	}
+}
+@media all and ( min-width: 800px ) {
+	.jumbotron .quote {
+		width: 80%;
+	}
+}
+@media all and ( min-width: 1000px ) {
+	.jumbotron .quote {
+		width: 50%;
+	}
 }
 .call-to-action {
-	font-size: 1.2em;
-	padding: 1em 1.4em .8em;
-	line-height: 1.5em;
-	background-color: rgba(65,166,42,1);
-	font-weight: 600;
-	text-align: center;
-	text-transform: uppercase;
-	color: #fff;
-	border: 0;
-	text-shadow: none;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	-ms-border-radius: 4px;
-	-o-border-radius: 4px;
-	border-radius: 4px;
+	font-size: 1.3em;
 	-webkit-transition: 0.1s all linear;
 	-moz-transition: 0.1s all linear;
 	-ms-transition: 0.1s all linear;
 	-o-transition: 0.1s all linear;
 	transition: 0.1s all linear;
 	-webkit-appearance: none;
-	display: inline-block;
-	position: relative;
 	text-rendering: optimizeLegibility;
 	white-space: nowrap;
-}
-.call-to-action:hover {
-	background-color: rgba(75,176,52,1);
-	cursor: pointer;
-	text-decoration: none;
-	color: rgba(255,255,255,1);
+	text-transform: uppercase;
 }
 .jumbotron .call-to-action {
-	margin: .5em 0 0 0;
+	margin: 1em 0 0 0;
+}
+.jumbotron a img {
+	border: 0;
+	background: transparent;
 }
 /**
  * CONTENT
  */
-.content {
-	clear: both;
-	margin: 12em 0 0 0;
+@media all and ( max-width: 991px ) {
+	.med-count {
+		margin-top: 80px;
+	}
+}
+@media all and ( max-width: 400px ) {
+	.site-content {
+		margin-top: -200px;
+	}
+}
+@media all and ( min-width: 400px ) {
+	.site-content {
+		margin-top: -200px;
+	}
+}
+@media all and ( min-width: 800px ) {
+	.site-content {
+		margin-top: 50px;
+	}
+}
+@media all and ( min-width: 1000px ) {
+	.home .site-content {
+		margin-top: 200px;
+	}
+}
+.breadcrumb {
+	background-color: rgba(250,250,250,1);
+}
+.breadcrumb a {
+	text-shadow: 0 0 1px rgba(240,240,240,.25);
+	color: rgba(92,184,92,1);
+	-webkit-transition: 0.3s all linear;
+	-moz-transition: 0.3s all linear;
+	-ms-transition: 0.3s all linear;
+	-o-transition: 0.3s all linear;
+	transition: 0.3s all linear;
+	-webkit-appearance: none;
+}
+.breadcrumb a:hover {
+	text-shadow: 0 0 1px rgba(200,200,200,.25);
+	text-decoration: none;
+	color: rgba(77,77,77,1);
+	-webkit-transition: 0.3s all linear;
+	-moz-transition: 0.3s all linear;
+	-ms-transition: 0.3s all linear;
+	-o-transition: 0.3s all linear;
+	transition: 0.3s all linear;
+	-webkit-appearance: none;
+}
+@media all and ( max-width: 799px ) {
+	.breadcrumb {
+		margin-top: 250px;
+	}
 }
 /**
  * FOOTER
